# rl-trade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: backend-smoke.yml  frontend-playwright-smoke.yml
alembic/: env.py
alembic/versions/: 0001_enable_timescaledb.py  0002_create_application_schema.py  0003_enable_ohlc_hypertable.py
apps/frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docker/: README.md  compose.gpu.yaml  frontend.Dockerfile  frontend.nginx.conf  python.Dockerfile
docker/scripts/: start-python-service.sh  startup_checks.py  verify_compose_runtime.py  verify_gpu_host.py  verify_training_worker_gpu.py
docs/: architecture.md  setup.md
tests/api/: test_auth.py  test_cors.py  test_evaluation_events.py  test_evaluations_api.py  test_health.py  test_ingestion_api.py  test_jobs.py  test_mt5.py  test_pipeline_events.py  test_preprocessing_api.py  test_supervised_training_api.py  test_symbol_validation.py  test_trading_api.py  test_trading_events.py  test_training_events.py  test_training_request_api.py  test_websocket_events.py
tests/common/: test_settings.py
tests/data/: run_timescaledb_validation.sh  test_migrations.py  test_models.py  test_session.py  test_timescale_integration.py
tests/features/: test_candlestick_patterns.py  test_dataset_versioning.py  test_feature_calculations.py  test_label_generation.py  test_multi_timeframe_alignment.py
(+155 files in other folders)
